change to hompage in json

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "newsapp",
-  "homepage": "https:/mrsaching302.github.io/newsapp",
+  "homepage": "https://mrsaching302.github.io/NewsApp",
   "version": "0.1.0",
   "private": false,
   "dependencies": {
